frontend/components/blocks/DonationBlock/DonationForm.module.css
/* Default Stripe & General styles */
.formWrapper {
    margin: 0 auto;
    max-width: 500px;
    min-width: 340px;
    background-color: var(--brand-white);
    border: 1px solid var(--brand-light-gray);
}

.formContainer {
    transition: height 0.4s ease, opacity 0.3s ease;

}
.formHeader {
    background-color: var(--brand-black);
    color: var(--brand-white);
    padding: 1rem;
    margin: none;
}
.formHeadline {
    padding: 0 1rem;

}
.contentWrapper {
    justify-items: center;
    padding: 0 3rem 3rem 3rem;
    transition: padding 0.3s ease;

}

@media (min-width: 768px) and (max-width: 900px) {
    .contentWrapper {
        width: 100%;
        padding: 0rem 1rem;
    }
}

.frequencyToggle {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    width: 100%;
    margin: 2rem 0;
    height: 3rem;
    align-items: center;
    justify-self: center;
    border-radius: 5px;
}
.freqButton {
    font-size: 16px;
    height: 100%;
    width: 100%;
    border: 2px solid transparent;
    color: var(--brand-black);
    padding: 0.6rem 0rem;
    margin: 0 auto;
    text-justify: center;
    text-decoration: none;
    background-color: transparent;
}


.amountGrid {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem;
    margin: 0.7rem 0;
    align-items: center;
    justify-self: center;
}
.amountButton {
    border-radius: 5px;
    width: auto;
    height: 3rem;
    margin: 0.2rem 0;
    border: 2px solid var(--brand-light-gray);
    color: var(--brand-black);
    padding: 0.5rem;
    text-decoration: none;
    background-color: transparent;
    font-size: 17px;
}
.amountInputField {
    display: flex;
    width: 100%;
    padding: 1rem;
    margin-bottom: 2rem;
    border-radius: 5px;
    border: 2px solid var(--brand-light-gray);
    transition: transform 0.35s ease;
    font-size: 16px;
    font-weight: 100;
    outline: none;
}
.amountInputField:focus,
.amountInputField:hover,
.amountInputField.activeBorder {
    border-color: var(--border-color);

}

.checkbox {
    width: 100%;
    height: auto;
    display: flex;
    align-items: flex-start;
    gap: 1rem;
    margin: 0.6rem 0;
    cursor: pointer;

}
.checkbox svg {
    height: 100%;
    width: 24px;
}

.actionButtonBox {
    width: 100%;
    margin: 1.5rem 0;
    display: flex;
    justify-content: center;

}
.navButton {
    width: 100%;
    max-width: 500px;
    height: 50px;
    border-radius: 5px;
    border: 2px solid var(--brand-light-gray);
    padding: 1rem;
    /* margin-top: 1rem; */
    text-decoration: none;
    background-color: transparent;
}

.arrow svg {
    display: flex;
    height: 100%;
    width: auto;
    padding-left: 0.5rem;
    align-self: center;
    justify-self: center;
}



/* Buttons -- active, hover, on click styling */
.freqButton,
.compactFreqButton,
.amountButton,
.compactAmountButton,
.navButton,
.compactNavButton {
    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
}

.selectedButton {
    background-color: var(--bg-color);
    color: var(--text-color);
    border: 2px solid var(--border-color);
    box-sizing: border-box;
}

.freqButton:hover,
.freqButton.active {
    background-color: var(--bg-color);
    color: var(--text-color);
    border-color: var(--border-color);

}

.amountButton:hover,
.amountButton.active {
    background-color: var(--bg-color);
    color: var(--text-color);
    border-color: var(--border-color);
}




/* Stripe checkout modal */
.modalOverlay {
    z-index: 9999;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);

    position: fixed;
    inset: 0;

    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;

}

.cancelButton {
    margin-top: 1rem;
    background-color: transparent;
    padding: 0.5rem 1rem;
    cursor: pointer;
    font-size: 0.9rem;
}


/* Stripe - Compact */

.compactFormWrapper {
    margin: 0 auto;
    max-width: 100%;
    width: auto;
    height: 100%;
    align-self: center;

}
.compactFormContainer {
    width: 100%;
}
.compactContentWrapper {
    justify-items: center;
}

.compactFrequencyToggle {
    display: grid;
    width: 100%;
    height: 3rem;
    grid-template-columns: repeat(3, 1fr);
    margin: 0 0 1rem 0;
    align-items: center;
    justify-self: center;
    border-radius: 5px;
}
.compactFreqButton {
    font-size: 16px;
    height: 100%;
    border: 2px solid transparent;
    color: var(--text-color);
    padding: 0.6rem 1rem;
    text-decoration: none;
    background-color: transparent;

}

.compactFreqButton:hover {
    background-color: var(--bg-color);
    color: var(--contrast-text-color);
    border-color: var(--border-color);

}


.compactAmountButton {
    border-radius: 5px;
    height: 3rem;
    width: 100%;
    border: 2px solid;
    background-color: var(--bg-color);
    color: var(--text-color);
    border-color: var(--border-color);
    padding: 1rem;
    text-decoration: none;
    background-color: transparent;
    font-size: 17px;
}
.compactAmountButton:hover {
    background-color: var(--bg-color);
    color: var(--contrast-text-color);
    border-color: var(--border-color);
}
.compactSelectedButton {
    background-color: var(--bg-color);
    color: var(--contrast-text-color);
    border: 2px solid var(--border-color);
    box-sizing: border-box;
}

.compactAmountGridWrapper {
    display: grid;
    width: 100%;
    height: 3rem;
    grid-template-columns: repeat(2, 1fr);
    gap: 0.5rem;
    margin: 0 0 1rem 0;
    align-items: center;
    justify-self: center;
}
.compactAmountGrid {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem;
    align-items: center;
    justify-self: center;
}
.compactAmountInputWrapper {
    display: flex;
    height: 100%;
    align-items: center;
    justify-content: space-between;
    gap: 0.1rem;
    border-bottom: 2px solid var(--border-color);
}
.compactAmountInputField {
    display: flex;
    width: 100%;
    height: 100%;
    text-align: center;
    background-color: transparent;
    border: none;
    transition: transform 0.35s ease;
    font-size: 16px;
    font-weight: 100;
}
.compactAmountInputField:focus {
    border-color: var(--border-color);
    outline: none;
}

.checkboxMenu {
    width: 100%;
    border-radius: 5px;
    border: 2px solid var(--border-color);
    padding: 0.2rem 0.5rem;
}

.compactDedicationField {
    display: flex;
    width: 99%;
    justify-self: center;
    height: 3rem;
    padding: 1rem;
    border: none;
    margin-bottom: 0.2rem;
    border-bottom: 2px solid var(--border-bottom);
    border-radius: 5px 5px 0 0;
    background-color: var(--bg-color);
    color: var(--text-color);
    transition: transform 0.35s ease;
    font-size: 16px;
    font-weight: 100;
    outline: none;

}
.compactActionButtonBox {
    width: 100%;
    margin: 0;
    display: flex;
    justify-content: center;

}
.compactNavButton {
    width: 100%;
    height: 50px;
    border-radius: 5px;
    border: 2px solid var(--border-light-gray);
    padding: 1rem;
    margin-top: 1rem;
    text-decoration: none;
    background-color: transparent;
}



/* Zeffy */

.zeffyContainer {
    display: flex;
    position: relative;
    align-self: center;
    justify-content: start;
    width: 100%;
}

.zeffyButton {
    display: inline-block;
    min-width: 150px;
    max-width: 300px;
    width: 100%;
    height: auto;
    justify-self: start;
    border: none;
    padding: 0.75rem 2rem;
    font-weight: 700;
    text-decoration: none;
    position: relative;
    z-index: 0;
    transform: skew(-10.25deg);
    clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
    font-size: 17px;
    background-color: var(--bg-color);
    color: var(--text-color);

    &:not(.disabled):active {
        box-shadow: none !important;
    }

}

.zeffyButton:focus-visible {
    outline: 3px solid var(--brand-aqua-teal);
    outline-offset: 1px;
}

.zeffyButton::before {
    content: '';
    position: absolute;
    inset: 0;
    background: var(--background);
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 0.4s ease-in-out;
    z-index: -1;
}

.zeffyButton:hover::before {
    transform: scaleX(1);
}

.zeffyButton:hover {
    color: var(--contrast-text-color);
}

@media (max-width: 768px) {
    .zeffyButton {
        margin: 0 auto;
        width: 100%;
        max-width: none;
    }
}


/* Zeffy Compact*/

.compactZeffyContainer {
    display: flex;
    position: relative;
    align-self: center;
    justify-content: start;

}

.compactZeffyButton {
    display: inline-block;
    color: var(--brand-white);
    background-color: var(--border-color);
    padding: 0.75rem 2rem;
    font-weight: 700;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    text-decoration: none;
    min-width: 150px;
    width: 100%;
    height: auto;
    margin: 0 auto;

    font-size: 16px;
    box-shadow: 0 2px 3px rgba(0 0 0 / 0.4) !important;

    &:not(.disabled):active {
        box-shadow: none !important;
    }
}

.compactZeffyButton:focus-visible {
    outline: 3px solid var(--brand-aqua-teal);
    outline-offset: 1px;
}

